<resources>
    <string name="version">versión 7</string>
    <string name="app_name">TRACKER GPS GESTION</string>
    <string name="configuracion">Configuración</string>
    <string name="localizar">localizar</string>
    <string name="num_telefono">Número </string>
    <string name="guardar">Guardar</string>
    <string name="comandolocalizar">Orden localizar</string>
    <string name="error_guardar_configuracion">Hubo un error al guardar la configuración. Debe reinstalar la aplicación.</string>
    <string name="configuracionguardada">Configuración guardada</string>
    <string name="localizar_dispositivo">Localizar dispositivo</string>
    <string name="mensajeentregado">Mensaje entregado</string>
    <string name="mensajenoentregado">Mensaje no enviado</string>
    <string name="minumero">Mi número de teléfono</string>
    <string name="mensaje_Localizar">¿Desea solicitar la posición al localizador?. Se consumirá un SMS de su saldo y otro en respuesta del localizador</string>
    <string name="titulo_mensaje_localizar">Enviar orden SMS de localización</string>
    <string name="noenviar">No enviar</string>
    <string name="enviar">Enviar</string>
    <string name="configuracionrecepcion">Configuración de recepción: Orden de datos numéricos en SMS</string>
    <string name="poscariniciolatitud">Posición caracter inicio latitud</string>
    <string name="posfinlatitud">Posición caracter final latitud</string>
    <string name="poscariniciolongitud">Posición caracter inicio longitud</string>
    <string name="poscarfinlongitud">Posición fin caracter longitud</string>
    <string name="localizar_por_sms">Localizar por SMS</string>
    <string name="configuracionenvio">Configuración de envíos</string>
    <string name="inicializar">Reset inicial</string>
    <string name="clave">Contraseña</string>
    <string name="cambiarclave">Cambiar la contraseña del localizador (PRECAUCION)</string>
    <string name="autorizar_mi_numero">Autorizar teléfono</string>
    <string name="desautorizarestetelefono">Desautorizar teléfono</string>
    <string name="cantidad_respuestas">Cantidad de respuestas [1 a 255]</string>
    <string name="modo_escuchar_voz">Modo escucha de voz</string>
    <string name="limitararea">Limitar en área geografica</string>
    <string name="activarlimitar">Activar limitar superficie</string>
    <string name="desactivarlimitar">Desactivar limitar superficie</string>
    <string name="desactivarlimitarvelocidad">Desactivar limitar velocidad</string>
    <string name="activarmodoescucha">Activar modo esucha de voz</string>
    <string name="desactivar_escuchavoz">Desactivar modo escucha de voz</string>
    <string name="configuracion_inicial">Configuración inicial</string>
    <string name="comandosSMS">Configuración de ordenes SMS</string>
    <string name="deteccion_movimiento">Detectar movimiento</string>
    <string name="activar_detectar_movimiento">Activar detección de movimiento</string>
    <string name="desactivar_detectar_movimiento">Desactivar detección de movimiento</string>
    <string name="detectar_exceso_velocidad">Detectar exceso de velocidad</string>
    <string name="activar_deteccion_exceso_velocidad">Activar detección exceso de velocidad</string>
    <string name="desactivar_deteccion_exceso_velocidad">Desactivar detección de exceso de velocidad</string>
    <string name="ordenposlatitud">Orden de aparición de latitud</string>
    <string name="ordenposlongitud">Orden de aparición de longitud</string>
    <string name="llamarlocalizador">LLamar a localizador</string>
    <string name="configuracion_avanzada">Configuración avanzada</string>
    <string name="Activar_autorastreo">Activar autorastreo</string>
    <string name="desactivar_autorastreo">Desactivar autorastreo</string>
    <string name="separador_coordenadas">Separador de coordenadas</string>
    <string name="InicializarConfFabrica">Inicializar (de fábrica)</string>
    <string name="configuracioninicial">Configuración inicial</string>
    <string name="ajustes">Ajustes</string>
    <string name="activardeteccionmovimiento">Activar detección</string>
    <string name="desactivardeteccionmovimiento">Desactivar detección</string>
    <string name="TiempoAutorastreo">Tiempo autorastreo (segundos: 30 a 255)</string>
    <string name="veceslimiteautorastreo">Máximo de posiciones de autorastreo (1 a 255)</string>
    <string name="resetfabrica">Inicialización de fábrica</string>
    <string name="invalidonumlocalizador">Número del localizador incorrecto. ¿Acceder a Ajustes / Configuración?</string>
    <string name="imposibleextraercoordenadas">No hay coordenadas en el mensaje SMS</string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
    <string name="activarautorastreo">Activar autorastreo</string>
    <string name="desactivarautorastreo">Desactivar autorastreo</string>
    <string name="autorastreo">Autorastreo</string>
    <string name="activarexcesovelocidad">Activar detección exceso velocidad</string>
    <string name="desactivarexcesovelocidad">Desactivar detección exceso de velocidad</string>
    <string name="deteccionexcesovelocidad">Exceso de velocidad</string>
    <string name="activar">Activar</string>
    <string name="desactivar">Desactivar</string>
    <string name="acercade">Acerca De</string>
    <string name="autor">Desarrollador: Víctor Herrera Arribas</string>
    <string name="dondeestoy">¿Donde estoy?</string>
    <string name="historial">Historial</string>
    <string name="Iniciando">Iniciando LOCALIZADOR GSM</string>
    <string name="modovozon">Activar escuchar voz</string>
    <string name="modovozoff">Activar modo localizar</string>
    <string name="modovoztracker">Modo localizador/voz</string>
    <string name="preciosmsestemovil">Precio por SMS de este  movil</string>
    <string name="preciosmslocalizador">Precio SMS</string>
    <string name="ponera0endiaindicado">Establecer gasto total a 0 en el día indicado de cada mes</string>
    <string name="saldo_localizador">Saldo</string>
    <string name="historialrecepcion">Historial de recepción SMS</string>
    <string name="historialenvio">Historial de envíos SMS</string>
    <string name="configuraciongasto">Configuración de gasto</string>
    <string name="saldominimoavisar">Saldo mínimo de aviso</string>
    <string name="saldoactual"></string>
    <string name="localizador"> \n Localizador </string>
    <string name="editar">Editar</string>
    <string name="Nuevo">Nuevo</string>
    <string name="borrar">Borrar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="nombrelocalizador">Nombre</string>
    <string name="Modelo">Modelo</string>
    <string name="Continuar">Continuar</string>
    <string name="Menu">Menú</string>
    <string name="detenersos">Detener responder a S.O.S</string>
    <string name="activaralarmaarea">Activar alarma limitar area</string>
    <string name="desactivaralarmaarea">Desactivar alarma limitar área</string>
    <string name="configinicial">Configuración inicial</string>
    <string name="activaralarmas">Activar respuesta mediante llamada</string>
    <string name="desactivaralarmas">Desactivar avisos de alarma</string>
    <string name="mesescaducidad">Meses de caducidad de tarjeta SIM</string>
    <string name="cambiarfecha">Cambiar fecha</string>
    <string name="fecharecarga">Fecha recarga de saldo</string>
    <string name="alarma">Alarma</string>
    <string name="mensajealarma">La tarjeta sim de un localizador está a punto de caducar</string>
    <string name="abrirlocalizadorgps">Abrir Localizador GPS</string>
    <string name="salir">Salir</string>
    <string name="cambiaridioma">Idioma</string>
    <string name="recibidode"> \n Recibido de: \n </string>
    <string name="bajasenalgps">ATENCIÓN:Baja recepción de señal GPS: baja precisión de la posición</string>
    <string name="deseacerrar">¿Desea cerrar la aplicación?</string>
    <string name="smsrecibido">SMS recibido</string>
    <string name="eventosmsrecibido">Recibido evento SMS del localizador</string>
    <string name="mostrarlocalizacion">Mostrar localización</string>
    <string name="gpsdeshabilitado">Receptor GPS deshabilitado</string>
    <string name="accederconfiguracion">¿Desea acceder al menú de configuración para habilitarlo?</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="datorequerido">Dato requerido</string>
    <string name="introducirnumeroestetelefono">Introducir número que controlará el localizador \n ( ESTE TELEFONO )</string>
    <string name="realizarconfinicial">Realizar configuración inicial</string>
    <string name="necesario2sms"> \n Es necesario enviar 2 SMS \n Mensajes SMS a enviar: \n  \n </string>
    <string name="numeroincorrecto">El número debe tener 6 dígitos como mínimo</string>
    <string name="aceptar">Aceptar</string>
    <string name="introducirnumeroautorizar">Introducir número de telefono a autorizar</string>
    <string name="introducirnumerodesautorizar">Introducir número de telefono a desautorizar</string>
    <string name="desautorizartelefono">Desautorizar teléfono</string>
    <string name="mensajesmsaenviar"> \n  Mensaje SMS a enviar: \n </string>
    <string name="continuar_pregunta"> \n ¿Continuar?</string>
    <string name="autorizartelefono">Autorizar teléfono</string>
    <string name="cuandoelvehiculosemuevaysupere">Cuando el vehículo se mueva y supere una distancia recibira un aviso de alarma \n  \n Introduzca la distancia en metros: </string>
    <string name="unavezelvehiculoestefueradelarea">Una vez el vehículo este fuerá del area, recibirá un sms de alarma repetido cada ciertos minutos. Introduzca número de minutos en los que se repetirá el mensaje sms de alarma.  \n ATENCION: Un número bajo puede producir un gasto excesivo de SMS \n Valor a introducir entre 10 y 15000</string>
    <string name="elnumerodeminutosdebeestar">El número de minutos debe estar entre 5 y 60</string>
    <string name="atencionellocalizadorespondera">ATENCION: El localizador responderá gastando el total de </string>
    <string name="introduzcalavelocidad">Introduzca la velocidad en Km/h</string>
    <string name="atencionrecuerdeactivarmodolocalizar">Atención: RECUERDE ACTIVAR MODO LOCALIZAR DE NUEVO PARA RECIBIR COORDENADAS GPS  \n SMS a enviar: \n </string>
    <string name="activarmodolocalizar">Activar modo localizar</string>
    <string name="preguntarlimitararea">Consultar Limitar area</string>
    <string name="toqueenlapantallasuperiorizquierda">Toque la pantalla en la esquina superior izquierda del rectangulo que especifica el limite de area</string>
    <string name="toqueenlapantallainferiorderecha">Toque la pantalla en la esquina inferior derecha del rectangulo que especifica el limite de area</string>
    <string name="toqueenlapantallacirculo">\nDibuje el circulo: \nToque en el centro del circulo\n </string>
    <string name="toqueenlapantallacirculo2">\nDibuje el circulo: \nToque en el borde del circulo\n </string>
    <string name="detalledeleventosmsrecibido">Detalle del SMS recibido</string>
    <string name="fechahoraderecepcion"> \n Fecha/Hora de recepción: \n </string>
    <string name="ajustedealarma">Ajuste de alarma</string>
    <string name="espanol">Español</string>
    <string name="ingles">Inglés</string>
    <string name="configuraravisos">Ajustes\nde avisos</string>
    <string name="descripcionsaldominimo">Cuando el saldo mínimo del localizador sea inferior al especificado se mostrará un aviso</string>
    <string name="descripcionmesesdecaducidad">Las tarjetas SIM prepago de los localizadores suelen darse de baja al pasar unos meses sin recargar saldo. Establezca aquí los meses después de la fecha de recarga en que quiere ser avisado</string>
    <string name="cortarcorriente">Función corte de electricidad</string>
    <string name="userypass">Usuario tracker Internet</string>
</resources>