<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="right" >
    <TextView
                android:id="@+id/textViewcomandosSMS"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/comandosSMS"
                android:textAppearance="?android:attr/textAppearanceMedium" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_below="@+id/textViewcomandosSMS"
        >

        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

                     


            <Button
                android:id="@+id/buttonGuardarConfAvanzada"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margenpordefecto"
                android:layout_weight="1"
                android:text="@string/guardar" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/configuracion_inicial"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textViewconfInicial"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/inicializar"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextconfInicial"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/autorizar_mi_numero"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextAutorizar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone|text" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/desautorizarestetelefono"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextDesautorizar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/deteccion_movimiento"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/activar_detectar_movimiento"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextActivarMovimiento"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/desactivar_detectar_movimiento"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextDesactivarDetectarMovimiento"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/autorastreo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Activar_autorastreo"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextRastreoActivar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/desactivar_autorastreo"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextRastreoDesactivar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/detectar_exceso_velocidad"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/activar_deteccion_exceso_velocidad"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextActivarDeteccionVelocidad"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/desactivar_deteccion_exceso_velocidad"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextdesactivarexcesovelocidad"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/modo_escuchar_voz"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/activarmodoescucha"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextActivarModoEscucharVoz"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/desactivar_escuchavoz"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextDesactivarModoEscucharVoz"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/limitararea"
                android:textAppearance="?android:attr/textAppearance" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/activarlimitar"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextActivarLimitarSuperficie"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/desactivarlimitar"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextDesactivarLimitSuperficie"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/View01"
                android:layout_width="fill_parent"
                android:layout_height="4dp"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/textodepuracion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/configuracionrecepcion"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textolocalizador"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ordenposlatitud"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextOrdenPosLatitud"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ordenposlongitud"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            
            <EditText
                android:id="@+id/editTextOrdenPosLongitud"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separador_coordenadas"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <EditText
                android:id="@+id/editTextseparadorcoordenadas"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10" >
               
            </EditText>
          
        </LinearLayout>
    </ScrollView>

</RelativeLayout>